[tool.poetry]
name = "blog"
version = "0.1.0"
description = "Personal blog"
authors = ["George-Iosif Andrei <hi@iosifache.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pelican = {extras = ["markdown"], version = "^4.8.0"}
pelican-linkclass = "^2.1.2"
pelican-yaml-metadata = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
